test/conformance/chainsaw/mutate/mutating-policy/standard/existing/trigger-unchanged/chainsaw-step-01-apply-1-1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mpol-trigger-test-ns
