test/conformance/chainsaw/mutate/mutating-policy/standard/existing/trigger-unchanged/chainsaw-step-01-apply-1-2.yaml
apiVersion: v1
kind: Secret
metadata:
  name: target-secret
  namespace: mpol-trigger-test-ns
type: Opaque
data:
  key: dmFsdWU=
