test/conformance/chainsaw/mutate/mutating-policy/standard/existing/trigger-unchanged/chainsaw-step-03-apply-1-1.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: trigger-cm
  namespace: mpol-trigger-test-ns
data:
  foo: bar
