test/conformance/chainsaw/mutate/mutating-policy/standard/existing/trigger-unchanged/chainsaw-step-05-assert-1-1.yaml
apiVersion: v1
kind: Secret
metadata:
  name: target-secret
  namespace: mpol-trigger-test-ns
  labels:
    mutated: "true"
type: Opaque
